# zerobrew

./: .gitignore  00_STATE.md  01_REPO_MAP.md  05_PR_CANDIDATES.md  06_SELECTED_5_PR_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  Justfile  LICENSE  PR.md  README.md  README.zh.md  SECURITY.MD  install-local.sh  install.sh  reinstall-zb  todo.txt  uninstall.sh
.codex/rules/: default.rules
.github/: MERGE_QUEUE_SETUP.md  pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  claude-merge.yml  claude-review.yml  homebrew-compat.yml  merge-queue.yml  release.yml  test.yml
dev/: AGENTS.md  HISTORICAL_VULNERABILITIES.md  JJ.md  MIGRATION_LEARNINGS.md  SECURITY_TEST_REPORT.md  SERVICES_FUTURE.md  SERVICES_IMPLEMENTATION_STATUS.md  SPEC.md  todo.txt
docs/: architecture.mdx  configuration.mdx  contributing.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/commands/: completion.mdx  gc.mdx  info.mdx  init.mdx  install.mdx  list.mdx  migrate.mdx  overview.mdx  reset.mdx  uninstall.mdx
docs/guides/: benchmarking.mdx  migrating-from-homebrew.mdx  troubleshooting.mdx
scripts/: install-git-hooks.sh
site/: eleventy.config.js  package.json  pnpm-lock.yaml
site/src/: _redirects  index.html  index.md  index.njk
zb_bench/: Cargo.toml
zb_bench/src/: main.rs
zb_brewfile/: Cargo.toml
zb_brewfile/src/: entry.rs  error.rs  export.rs  historical_vulnerabilities_tests.rs  import.rs  lib.rs  parser.rs  security_tests.rs
zb_cli/: Cargo.toml
zb_cli/src/: cli.rs  init.rs  lib.rs  main.rs  ui.rs  utils.rs
zb_cli/src/commands/: bundle.rs  info.rs  init.rs  install.rs  list.rs  migrate.rs  mod.rs  outdated.rs  repair.rs  reset.rs  run.rs  tap.rs  uninstall.rs  untap.rs  update.rs  upgrade.rs
zb_cli/tests/: integration.rs
zb_core/: Cargo.toml
zb_core/src/: bottle.rs  context.rs  errors.rs  formula.rs  historical_vulnerabilities_tests.rs  lib.rs  resolve.rs  security_tests.rs  validation.rs  version.rs
zb_core/tests/: README.md  circular_dependency_test.rs
zb_io/: Cargo.toml
zb_io/src/: api.rs  aria2.rs  blob.rs  brewfile.rs  cache.rs  checksum.rs  db.rs  download.rs  extract.rs  formula_parser.rs  install.rs  install_formula.rs  install_tests.rs  lib.rs  link.rs  linux_patch.rs  materialize.rs  path.rs  progress.rs  ssl.rs  store.rs  tap.rs
zb_io/tests/: api_contract.rs  linux_integration.rs
zb_migrate/: Cargo.toml
zb_migrate/src/: lib.rs  migrate.rs  scanner.rs  security_tests.rs  tab.rs
zb_services/: Cargo.toml
zb_services/src/: definition.rs  error.rs  lib.rs  manager.rs  security_tests.rs  validation.rs
zb_services/src/launchd/: manager.rs  mod.rs  plist.rs  status.rs
zb_web/: zola.toml
zb_web/content/: _index.md
zb_web/templates/: base.html  docs-page.html  docs-section.html  (+2 more)
(+136 files in other folders)
