[package]
name = "zb_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
tempfile = "3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"

zb_core = { path = "../zb_core" }
zb_io = { path = "../zb_io" }
