[package]
name = "zb_migrate"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
zb_core = { path = "../zb_core" }
zb_io = { path = "../zb_io" }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
