[package]
name = "zb_services"
version = "0.1.0"
edition = "2024"

[dependencies]
zb_core = { path = "../zb_core" }
zb_io = { path = "../zb_io" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
plist = "1.7"
regex = "1.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3"